resolve IE scrollbar

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -14,6 +14,7 @@ body {
 #app {
   position: absolute;
   top: 0px;
+  left: 0;
   bottom: 0px;
   width: 100%;
 }
@@ -61,3 +62,4 @@ img {
   border-radius: 2px;
   min-height: 52px;
 }
+
